clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00149.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00149.c" (c, x86_64-unknown-linux-gnu)
global .compoundliteral : rec_S = ConstRecord { ty: Named("rec_S"), members: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "2" }]) } [internal, default, align 4, dso_local]
global s : rec_S* = GlobalView { ty: Pointer { pointee: Named("rec_S"), addr_space: None }, symbol: ".compoundliteral", indices: None } [external, default, align 8, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %12 = get_global @s : rec_S**
                %13 = load %12 : rec_S*, align 8
                get_member
                %15 = load %14 : s32i, align 4
                %16 = const 1 : s32i
                cmp
                if %17 {
                        %18 = const 1 : s32i
                        store %18, %0
                        %19 = load %0 : s32i
                        return %19
                }
                yield
        }
        scope {
                %4 = get_global @s : rec_S**
                %5 = load %4 : rec_S*, align 8
                get_member
                %7 = load %6 : s32i, align 4
                %8 = const 2 : s32i
                cmp
                if %9 {
                        %10 = const 2 : s32i
                        store %10, %0
                        %11 = load %0 : s32i
                        return %11
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
