clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00151.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00151.c" (c, x86_64-unknown-linux-gnu)
global arr : s32i[5][3][2] = ConstArray { ty: Array { element_type: Array { element_type: Array { element_type: Named("s32i"), size: 5 }, size: 3 }, size: 2 }, elts: Array([ConstArray { ty: Array { element_type: Array { element_type: Named("s32i"), size: 5 }, size: 3 }, elts: Array([ConstArray { ty: Array { element_type: Named("s32i"), size: 5 }, elts: Array([CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "3" }, CirInt { ty: Named("s32i"), value: "5" }]), trailing_zeros_num: 1 }, ConstArray { ty: Array { element_type: Named("s32i"), size: 5 }, elts: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "6" }, CirInt { ty: Named("s32i"), value: "7" }]), trailing_zeros_num: 0 }]), trailing_zeros_num: 1 }, ConstArray { ty: Array { element_type: Array { element_type: Named("s32i"), size: 5 }, size: 3 }, elts: Array([ConstArray { ty: Array { element_type: Named("s32i"), size: 5 }, elts: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "2" }]), trailing_zeros_num: 1 }, ConstArray { ty: Array { element_type: Named("s32i"), size: 5 }, elts: Array([CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "7" }]), trailing_zeros_num: 0 }]), trailing_zeros_num: 1 }]), trailing_zeros_num: 0 } [external, default, align 16, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 4 : s64i
        %3 = const 1 : s64i
        %4 = const 0 : s64i
        %5 = get_global @arr : s32i[5][3][2]*
        get_element
        get_element
        get_element
        %9 = load %8 : s32i, align 4
        %10 = const 4 : s64i
        %11 = const 1 : s64i
        %12 = const 1 : s64i
        %13 = get_global @arr : s32i[5][3][2]*
        get_element
        get_element
        get_element
        %17 = load %16 : s32i, align 4
        cmp
        not
        %20 = cast(bool_to_int) %19 : s32i
        store %20, %0
        %21 = load %0 : s32i
        return %21
}
