clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00154.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00154.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_fred, "bloggs", align 4
    %2 = alloca rec_fred[2], "jones", align 16
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 12 : s32i
    %5 = get_member %1[0] "boris" : s32i*
    store %4, %5, align 4
    %6 = const 34 : s32i
    %7 = get_member %1[1] "natasha" : s32i*
    store %6, %7, align 4
    %8 = get_global @printf : ((s8i*, ...) -> s32i)*
    %9 = get_global @.str : s8i[4]*
    %10 = cast(array_to_ptrdecay) %9 : s8i*
    %11 = get_member %1[0] "boris" : s32i*
    %12 = load %11 : s32i, align 4
    %13 = call @printf(%10, %12) : s32i [all]
    %14 = get_global @printf : ((s8i*, ...) -> s32i)*
    %15 = get_global @.str : s8i[4]*
    %16 = cast(array_to_ptrdecay) %15 : s8i*
    %17 = get_member %1[1] "natasha" : s32i*
    %18 = load %17 : s32i, align 4
    %19 = call @printf(%16, %18) : s32i [all]
    %20 = const 12 : s32i
    %21 = const 0 : s64i
    %22 = get_element %2[%21] : rec_fred*
    %23 = get_member %22[0] "boris" : s32i*
    store %20, %23, align 16
    %24 = const 34 : s32i
    %25 = const 0 : s64i
    %26 = get_element %2[%25] : rec_fred*
    %27 = get_member %26[1] "natasha" : s32i*
    store %24, %27, align 4
    %28 = const 56 : s32i
    %29 = const 1 : s64i
    %30 = get_element %2[%29] : rec_fred*
    %31 = get_member %30[0] "boris" : s32i*
    store %28, %31, align 8
    %32 = const 78 : s32i
    %33 = const 1 : s64i
    %34 = get_element %2[%33] : rec_fred*
    %35 = get_member %34[1] "natasha" : s32i*
    store %32, %35, align 4
    %36 = get_global @printf : ((s8i*, ...) -> s32i)*
    %37 = get_global @.str : s8i[4]*
    %38 = cast(array_to_ptrdecay) %37 : s8i*
    %39 = const 0 : s64i
    %40 = get_element %2[%39] : rec_fred*
    %41 = get_member %40[0] "boris" : s32i*
    %42 = load %41 : s32i, align 16
    %43 = call @printf(%38, %42) : s32i [all]
    %44 = get_global @printf : ((s8i*, ...) -> s32i)*
    %45 = get_global @.str : s8i[4]*
    %46 = cast(array_to_ptrdecay) %45 : s8i*
    %47 = const 0 : s64i
    %48 = get_element %2[%47] : rec_fred*
    %49 = get_member %48[1] "natasha" : s32i*
    %50 = load %49 : s32i, align 4
    %51 = call @printf(%46, %50) : s32i [all]
    %52 = get_global @printf : ((s8i*, ...) -> s32i)*
    %53 = get_global @.str : s8i[4]*
    %54 = cast(array_to_ptrdecay) %53 : s8i*
    %55 = const 1 : s64i
    %56 = get_element %2[%55] : rec_fred*
    %57 = get_member %56[0] "boris" : s32i*
    %58 = load %57 : s32i, align 8
    %59 = call @printf(%54, %58) : s32i [all]
    %60 = get_global @printf : ((s8i*, ...) -> s32i)*
    %61 = get_global @.str : s8i[4]*
    %62 = cast(array_to_ptrdecay) %61 : s8i*
    %63 = const 1 : s64i
    %64 = get_element %2[%63] : rec_fred*
    %65 = get_member %64[1] "natasha" : s32i*
    %66 = load %65 : s32i, align 4
    %67 = call @printf(%62, %66) : s32i [all]
    %68 = const 0 : s32i
    store %68, %0
    %69 = load %0 : s32i
    return %69
}
