clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00156.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00156.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "Count", align 4
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %5 = const 1 : s32i
        store %5, %1, align 4
        for cond: {
            %13 = load %1 : s32i, align 4
            %14 = const 10 : s32i
            %15 = cmp le %13, %14 : bool
            condition %15
        } step: {
            %6 = load %1 : s32i, align 4
            %7 = inc %6 : s32i [nsw]
            store %7, %1, align 4
            yield
        } do {
            scope {
                %8 = get_global @printf : ((s8i*, ...) -> s32i)*
                %9 = get_global @.str : s8i[4]*
                %10 = cast(array_to_ptrdecay) %9 : s8i*
                %11 = load %1 : s32i, align 4
                %12 = call @printf(%10, %11) : s32i [all]
                yield
            }
            yield
        }
        yield
    }
    %3 = const 0 : s32i
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
