clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00157.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00157.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "Count", align 4
        %2 = alloca s32i[10], "Array", align 16
        %3 = const 0 : s32i
        store %3, %0
        scope {
                %20 = const 1 : s32i
                store %20, %1, align 4
                for cond {
                        %31 = load %1 : s32i, align 4
                        %32 = const 10 : s32i
                        cmp
                        condition %33
                } step {
                        %21 = load %1 : s32i, align 4
                        inc
                        store %22, %1, align 4
                        yield
                } body {
                        scope {
                                %23 = load %1 : s32i, align 4
                                %24 = load %1 : s32i, align 4
                                mul
                                %26 = load %1 : s32i, align 4
                                %27 = const 1 : s32i
                                sub
                                %29 = cast(integral) %28 : s64i
                                get_element
                                store %25, %30, align 4
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %6 = const 0 : s32i
                store %6, %1, align 4
                for cond {
                        %17 = load %1 : s32i, align 4
                        %18 = const 10 : s32i
                        cmp
                        condition %19
                } step {
                        %7 = load %1 : s32i, align 4
                        inc
                        store %8, %1, align 4
                        yield
                } body {
                        scope {
                                %9 = get_global @printf : (s8i*, ...) -> s32i*
                                %10 = get_global @.str : s8i[4]*
                                %11 = cast(array_to_ptrdecay) %10 : s8i*
                                %12 = load %1 : s32i, align 4
                                %13 = cast(integral) %12 : s64i
                                get_element
                                %15 = load %14 : s32i, align 4
                                %16 = call @printf(%11, %15) : s32i [all]
                                yield
                        }
                        yield
                }
                yield
        }
        %4 = const 0 : s32i
        store %4, %0
        %5 = load %0 : s32i
        return %5
}
